// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmartContractAccountToggle Basic Rendering shows toggle as OFF for unsupported networks 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--justify-content-space-between"
  >
    <p
      class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
    >
      Sepolia
    </p>
    <label
      class="toggle-button toggle-button--off"
      tabindex="0"
    >
      <div
        style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
      >
        <div
          style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(75, 80, 92);"
        >
          <div
            style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 0; width: 26px; height: 20px; left: 4px;"
          />
          <div
            style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 1;"
          />
        </div>
        <div
          style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
        >
          <div
            style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 3px;"
          />
        </div>
        <input
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
          type="checkbox"
          value="false"
        />
      </div>
      <div
        class="toggle-button__status"
      >
        <span
          class="toggle-button__label-off"
        />
        <span
          class="toggle-button__label-on"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`SmartContractAccountToggle Basic Rendering shows toggle as enabled for supported networks 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--justify-content-space-between"
  >
    <p
      class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
    >
      Ethereum
    </p>
    <label
      class="toggle-button toggle-button--on"
      tabindex="0"
    >
      <div
        style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
      >
        <div
          style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(139, 153, 255);"
        >
          <div
            style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 1; width: 26px; height: 20px; left: 4px;"
          />
          <div
            style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 0;"
          />
        </div>
        <div
          style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
        >
          <div
            style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 18px;"
          />
        </div>
        <input
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
          type="checkbox"
          value="true"
        />
      </div>
      <div
        class="toggle-button__status"
      >
        <span
          class="toggle-button__label-off"
        />
        <span
          class="toggle-button__label-on"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`SmartContractAccountToggle Disabled State disables toggle during pending requests 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--justify-content-space-between"
  >
    <p
      class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
    >
      Ethereum
    </p>
    <label
      class="toggle-button toggle-button--on toggle-button--disabled"
      tabindex="0"
    >
      <div
        style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
      >
        <div
          style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(139, 153, 255);"
        >
          <div
            style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 1; width: 26px; height: 20px; left: 4px;"
          />
          <div
            style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 0;"
          />
        </div>
        <div
          style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
        >
          <div
            style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 18px;"
          />
        </div>
        <input
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
          type="checkbox"
          value="true"
        />
      </div>
      <div
        class="toggle-button__status"
      >
        <span
          class="toggle-button__label-off"
        />
        <span
          class="toggle-button__label-on"
        />
      </div>
    </label>
  </div>
</div>
`;
